
* Fixed two bugs related to reloading groups and keys files which
  could cause xtickertape to crash.

* Fixed iconv library management.  Mac OS X users should no longer
  need to hack the link lines to make xtickertape compile.

* Now accepts string attachments (previously only opaque ones were
  permitted) for better interoperability with other tickertape
  implementations. Fixed bug #1265.

Overview of changes in xtickertape-2.0rc1

* Notification format upgraded to conform to version 3.1 of the
  tickertape chat protocol.

* It's now finally possible to reload a groups file in which the keys
  for a group have changed.  It's also possible to reload the keys
  file or all config files (with a SIGHUP).

* It is now possible to reply to a message in a 'no menu' group.

* Fixed a thinko in the metamail invocation which caused the first
  argument to be lost and thus metamail would cause it to hang.

Overview of changes in xtickertape-2.0b2

* Fixed a bug that prevented the connection status from being updated
  properly.

* Added the `-u' option to show-url command, making it possible to
  specify the URL on the command-line rather than writing it to a file
  first.

* Changed the metamail invocation to use execlp instead of execl,
  which means that the PATH environment variable is consulted.  The
  corresponding app-default has changed name from [Mm]etamailPath to
  simply [Mm]etamail.

* Binary package support for Redhat, Mandrake and Debian.

* Fixed a counting error that could cause xtickertape to crash when
  trying to display certain kinds of MIME attachments.  Also rewriting
  the MIME headers before sending them to metamail, which doesn't cope
  well with any end-of-line convention but LF.

Overview of changes in xtickertape-2.0b1

* Messages containing non-ASCII characters are now sent and displayed
  correctly.

* Reworked the way dragging is handled by the Scroller widget so that
  you can perform actions on a message while dragging the scroller